--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,23 +3,25 @@ on:
   push:
     branches:
       - main
-    tags:
-      - '*'
+    paths:
+      - '**.go'
   pull_request:
     branches:
       - main
+    paths:
+      - '**.go'
 jobs:
   test:
     name: Test with coverage
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
       - name: Setup Go
-        uses: actions/setup-go@v2
+        uses: actions/setup-go@v3
         with:
           go-version: '1.18'
       - name: Run tests
-        run: go test -v -coverprofile=cover.out ./...
+        run: go test -v -coverprofile=coverage.txt ./...
       - name: Send coverage
-        run: bash <(curl -s https://codecov.io/bash)
+        uses: codecov/codecov-action@v2
